--- a/2023/em/em_1_p2a/em_1_p2a_01.md
+++ b/2023/em/em_1_p2a/em_1_p2a_01.md
@@ -1,3 +1,7 @@
-Um sinal de trânsito emite luz verde com frequência $\pu{5,7e14 Hz}$.
+**Apresente** a fórmula molecular dos compostos iônicos.
 
-**Determine** o comprimento de onda da luz emitida pelo sinal.
+a. Cloreto de manganês(II)
+b. Fosfato de cálcio
+c. Sulfito de alumínio dihidratado
+d. Nitreto de magnésio
+e. Hidróxido de bário
