--- a/2023/em/em_1_p2a/em_1_p2a_04.md
+++ b/2023/em/em_1_p2a/em_1_p2a_04.md
@@ -1,7 +1,12 @@
 ---
-elementos: Na, Mg, F
+elementos: P, I, Cl, P, F, Xe
 ---
 
-Considere os íons: $\ce{Na^+}$, $\ce{Mg^{2+}}$, $\ce{F^-}$.
+**Determine** a geometria em torno do átomo central para as moléculas.
 
-**Ordene** os íons em função de seu raio iônico.
+a. $\ce{PF4^-}$
+b. $\ce{ICl4^+}$
+c. $\ce{PF5}$
+d. $\ce{XeF4}$
+
+
