--- a/2023/em/em_1_p2a/em_1_p2a_05.md
+++ b/2023/em/em_1_p2a/em_1_p2a_05.md
@@ -1,10 +1,10 @@
 ---
-elementos: Te, I, Be, Mg
+elementos: Cl, S, F
 ---
 
-Considere os pares de elementos
+**Classifique** cada molécula como polar ou apolar.
 
-1. Telúrio e iodo.
-2. Berílio e magnésio.
-
-**Compare** a afinidade eletrônica dos elementos de cada par.
+a. $\ce{CH2Cl2}$
+b. $\ce{CCl4}$
+c. $\ce{CS2}$
+d. $\ce{SF4}$
