--- a/2023/em/em_1_p2a/em_1_p2a_09.md
+++ b/2023/em/em_1_p2a/em_1_p2a_09.md
@@ -1,3 +1,11 @@
-Um bebê, acometido de infecção brônquica severa, está com problemas respiratórios. O anestesista administra uma mistura de hélio e oxigênio, com $\pu{92,3}\%$ de $\ce{O2}$ em massa. A pressão atmosférica é $\pu{730 Torr}$.
+---
+elementos: Fe, Ag, Pb, Ba, K, S, Na, Cl
+---
 
-**Determine** a pressão parcial do oxigênio na mistura que está sendo administrada no bebê.
+**Apresente** a equação iônica simplificada de precipitação que ocorre quando as soluções aquosas contendo os solutos a seguir são misturadas:
+
+a. $\ce{Fe3(SO4)2(aq)}$ e $\ce{NaOH(aq)}$.
+b. $\ce{AgNO3(aq)}$ e $\ce{K2CO3(aq)}$.
+c. $\ce{Pb(NO3)2(aq)}$ e $\ce{CH3CH2ONa(aq)}$.
+d. $\ce{BaCl2(aq)}$ e $\ce{K2SO4(aq)}$.
+
