--- a/2023/em/em_1_p2a/em_1_p2a_10.md
+++ b/2023/em/em_1_p2a/em_1_p2a_10.md
@@ -1,7 +1,4 @@
-Os *airbags* de automóveis contém cristais de azida de sódio, $\ce{NaN3}$, que, durante uma colisão, decompõem-se rapidamente para dar gás nitrogênio e o metal sódio:
-$$
-    \ce{ 2 NaN3(s) -> 2 Na(s) + 3 N2(g) }
-$$
-O gás nitrogênio liberado no processo infla instantaneamente o *airbag*.
+Um alíquota de $\pu{10 mL}$ de uma solução $\pu{3 mol.L-1}$ de $\ce{KOH}$ foi transferida para um balão volumétrico de $\pu{250 mL}$ e diluída até a marca. Foram necessários $\pu{38,5 mL}$ da solução diluída para titular $\pu{10 mL}$ de uma solução de ácido fosfórico, $\ce{H3PO4}$.
 
-**Determine** a massa de azida de sódio necessária para gerar gás nitrogênio suficiente para encher um *airbag* de $\pu{57 L}$, em $\pu{1,37 atm}$ e $\pu{25 \degree C}$.
+a. **Apresente** a equação balanceada pra a reação de titulação.
+b. **Determine** a concentração da solução de ácido fosfórico.
