--- a/2023/em/em_1_p2b/em_1_p2b_01.md
+++ b/2023/em/em_1_p2b/em_1_p2b_01.md
@@ -1,5 +1,8 @@
-Uma estação de rádio transmite em $\pu{98,4 MHz}$.
+**Apresente** a fórmula molecular dos compostos iônicos.
 
-**Determine** o comprimento de onda do sinal emitido pela estação.
-
+a. Fosfito de cobalto(II)
+b. Brometo de magnésio
+c. Sulfeto de cromo(III)
+d. Cloreto de níquel(II) dihidratado
+e. Hidreto de sódio
 
