--- a/2023/em/em_1_p2b/em_1_p2b_02.md
+++ b/2023/em/em_1_p2b/em_1_p2b_02.md
@@ -1,3 +1,11 @@
-Um átomo de hidrogênio emite radiação com $n_1 = 2$ e $n_2 = 5$.
+---
+elementos: Ag, Fe, Bi, Co
+---
 
-**Determine** o comprimento de onda da radiação emitida.
+**Apresente** a configuração eletrônica pra cada íon:
+
+a. $\ce{Ag^{+}}$
+b. $\ce{Fe^{3+}}$
+c. $\ce{Bi^{3+}}$
+d. $\ce{Co^{2+}}$
+
