--- a/2023/em/em_1_p2b/em_1_p2b_03.md
+++ b/2023/em/em_1_p2b/em_1_p2b_03.md
@@ -1,5 +1,12 @@
 ---
-elementos: As
+elementos: Br, I, Cl, Xe, F
 ---
 
-**Apresente** a configuração eletrônica do estado fundamental e os números quânticos do orbital atômico mais energético o átomo de arsênio.
+**Apresente** a estrutura de Lewis para as moléculas.
+
+a. $\ce{BrF5}$
+b. $\ce{ICl2^-}$
+c. $\ce{XeOF2}$
+d. $\ce{XeF4}$
+e. $\ce{XeOF4}$.
+
