--- a/2023/em/em_1_p2b/em_1_p2b_04.md
+++ b/2023/em/em_1_p2b/em_1_p2b_04.md
@@ -1,8 +1,12 @@
 ---
-elementos: S, Cl, P
+elementos: S, F, I, Cl, Xe
 ---
 
-Considere os íons: $\ce{S^{2-}}$, $\ce{Cl^-}$, $\ce{P^{3-}}$.
+**Determine** a geometria em torno do átomo central para as moléculas.
 
-**Ordene** os íons em função de seu raio iônico.
+a. $\ce{SF4}$
+b. $\ce{ICl3}$
+c. $\ce{IF4^-}$
+d. $\ce{XeO3}$
+
 
