--- a/2023/em/em_1_p2b/em_1_p2b_05.md
+++ b/2023/em/em_1_p2b/em_1_p2b_05.md
@@ -1,10 +1,12 @@
 ---
-elementos: P, As, B, C
+elementos: H, S, P, F
 ---
 
-Considere os pares de elementos
+**Classifique** cada molécula como polar ou apolar.
 
-1. Boro e carbono.
-2. Fósforo e arsênio.
+a. $\ce{H2S}$
+b. $\ce{PF5}$
+c. $\ce{CO2}$
+d. $\ce{NF3}$
 
-**Compare** a afinidade eletrônica dos elementos de cada par.
+
