--- a/2023/em/em_1_p2b/em_1_p2b_06.md
+++ b/2023/em/em_1_p2b/em_1_p2b_06.md
@@ -1,10 +1,3 @@
+Deseja-se preparar $\pu{50 mL}$ de uma solução $\pu{0,125 mol.L-1}$ de ácido oxálico, $\ce{C2H2O4}$.
 
-Considere as equações simplificadas.
-
-1. $\ce{ KClO3(s) -> KCl(s) + O2(g) }$
-2. $\ce{ KClO3(l) -> KCl(s) + KClO4(g) }$
-3. $\ce{ N2H4(aq) + I2(aq) -> HI(aq) + N2(g) }$
-4. $\ce{ P4O10(s) + H2O(l) -> H3PO4(l) }$
-
-**Apresente** a equação química balanceada para cada equação simplificada.
-
+**Determine** a massa de ácido oxálico necessária para preparar a solução.
