--- a/2023/em/em_1_p2b/em_1_p2b_07.md
+++ b/2023/em/em_1_p2b/em_1_p2b_07.md
@@ -1,10 +1,7 @@
 ---
-elementos: Ca, Si
+elementos: Zn
 ---
 
-O dióxido de carbono pode ser removido dos gases emitidos por uma usina termelétrica combinando-o com uma emulsão de silicato de cálcio em água:
-$$
-    \ce{ 2 CO2(g) + H2O(l) + CaSiO3(s) -> SiO2(s) + Ca(HCO3)2(aq) }
-$$
+Uma solução aquosa de nitrato de zinco, $\ce{Zn(NO3)2}$, tem molalidade $\pu{0,643 mol.L-1}$ e molalidade $\pu{0,653 mol.kg-1}$.
 
-**Determine** a massa de $\ce{CaSiO3}$ necessária para reagir completamente com $\pu{0,3 kg}$ de dióxido de carbono.
+**Determine** a densidade da solução.
