--- a/2023/em/em_1_p2b/em_1_p2b_09.md
+++ b/2023/em/em_1_p2b/em_1_p2b_09.md
@@ -1,3 +1,11 @@
-Alguns mergulhadores estão explorando um naufrágio e desejam evitar a narcose associada à respiração de nitrogênio sob alta pressão. Eles passaram a usar uma mistura de neônio-oxigênio que contém $\pu{141 g}$ de oxigênio e $\pu{335 g}$ de neônio. A pressão nos tanques de gás é $\pu{50 atm}$.
+---
+elementos: Ni, Cu, Na, P, Ba, K, Cl, S
+---
 
-**Determine** a pressão parcial de oxigênio nos tanques.
+**Apresente** a equação iônica simplificada de precipitação que ocorre quando as soluções aquosas contendo os solutos a seguir são misturadas:
+
+a. $\ce{Ca(NO3)2(aq)}$ e $\ce{Na2CO3(aq)}$.
+b. $\ce{NiSO4(aq)}$ e $\ce{CuCl2(aq)}$.
+c. $\ce{Na3PO4(aq)}$ e $\ce{BaCl2(aq)}$.
+d. $\ce{NaCl(aq)}$ e $\ce{K2S(aq)}$.
+
