--- a/2023/em/em_1_p2b/em_1_p2b_10.md
+++ b/2023/em/em_1_p2b/em_1_p2b_10.md
@@ -1,6 +1,4 @@
-A nitroglicerina é um líquido sensível ao choque, que detona pela reação:
-$$
-    \ce{ C3H5(NO3)3(l) -> N2(g) + H2O(g) + CO2(g) + O2(g) }
-$$
+Uma alíquota de $\pu{25 mL}$ de uma solução do ácido oxálico, $\ce{H2C2O4}$, foi titulada com $\pu{30 mL}$ de $\ce{NaOH}$ $\pu{0,3 mol.L-1}$.
 
-**Determine** o volume total de gases produzido, em $\pu{88,5 kPa}$ e $\pu{175 \degree C}$, na detonação de $\pu{454 g}$ de nitroglicerina.
+a. **Apresente** a equação balanceada pra a reação de titulação.
+b. **Determine** a concentração da solução de ácido oxálico.
