--- a/2023/em/em_1_p2a/em_1_p2a_02.md
+++ b/2023/em/em_1_p2a/em_1_p2a_02.md
@@ -1,3 +1,12 @@
-Um átomo de hidrogênio emite radiação com $n_1 = 1$ e $n_2 = 3$.
+---
+elementos: W, Ni, Co, Sc
+---
 
-**Determine** o comprimento de onda da radiação emitida.
+**Apresente** a configuração eletrônica pra cada íon:
+
+a. $\ce{W^{2+}}$
+b. $\ce{Ni^{2+}}$
+c. $\ce{Co^{2+}}$
+d. $\ce{Sc^{3+}}$
+
+
