--- a/2023/em/em_1_p2a/em_1_p2a_03.md
+++ b/2023/em/em_1_p2a/em_1_p2a_03.md
@@ -1,5 +1,12 @@
 ---
-elementos: Bi
+elementos: I, S, F, Xe, F, As, Te, Cl
 ---
 
-**Apresente** a configuração eletrônica do estado fundamental e os números quânticos do orbital atômico mais energético o átomo de bismuto.
+**Apresente** a estrutura de Lewis para as moléculas.
+
+a. $\ce{I3^-}$
+b. $\ce{SF6}$
+c. $\ce{XeF2}$
+d. $\ce{AsF6^-}$
+e. $\ce{TeCl4}$
+
