--- a/2023/em/em_1_p2a/em_1_p2a_06.md
+++ b/2023/em/em_1_p2a/em_1_p2a_06.md
@@ -1,9 +1,3 @@
+Deseja-se preparar $\pu{150 mL}$ de uma solução $\pu{0,442 mol.L-1}$ de glicose, $\ce{C6H12O6}$.
 
-Considere as equações simplificadas.
-
-1. $\ce{ NaBH4(s) + H2O(l) -> NaBO2(aq) + H2(g) }$
-2. $\ce{ Mg(N3)2(s) + H2O(l) -> Mg(OH)2(aq) + HN3(aq) }$
-3. $\ce{ NaCl(aq) + SO3(g) + H2O(l) -> Na2SO4(aq) + HCl(aq) }$
-4. $\ce{ Fe2P(s) + S(s) -> P4S10(s) + FeS(s) }$
-
-**Apresente** a equação química balanceada para cada equação simplificada.
+**Determine** a massa de glicose necessária para preparar a solução.
