--- a/2023/em/em_1_p2a/em_1_p2a_07.md
+++ b/2023/em/em_1_p2a/em_1_p2a_07.md
@@ -1,10 +1,7 @@
 ---
-elementos: Li, H, N
+elementos: S
 ---
 
-Compostos que possam ser usados para acumular hidrogênio em veículos estão sendo ativamente procurados. Uma das reações estudadas para a armazenarem do hidrogênio é
-$$
-    \ce{ Li3N(s) + 2 H2(g) -> LiNH2(s) + 2 LiH(s) }
-$$
+O ácido de bateria é uma solução aquosa $\pu{4,27 mol.L-1}$ em ácido sulfúrico, $\ce{H2SO4}$, e densidade $\pu{1,25 g.cm-3}$.
 
-**Determine** a massa de $\ce{Li3N}$ necessária para produzir $\pu{5,2 g}$ de $\ce{LiH}$.
+**Determine** a molalidade do ácido sulfúrico na solução.
