--- a/2023/em/em_1_p2a/em_1_p2a_08.md
+++ b/2023/em/em_1_p2a/em_1_p2a_08.md
@@ -1,3 +1,3 @@
-Quando $\pu{0,53 g}$ de sacarose (um composto de carbono, hidrogênio e oxigênio) é queimado, formam-se $\pu{0,31 g}$ de água e $\pu{0,82 g}$ de dióxido de carbono.
+Um experimento necessita de $\pu{60 mL}$ de uma solução aquosa $\pu{0,5 mol.L-1}$ de $\ce{NaOH}$. O técnico do laboratório só encontrou um frasco contendo uma solução $\pu{2,5 mol.L-1}$ de $\ce{NaOH}$.
 
-**Determine** a fórmula empírica da sacarose.
+**Determine** o volume da solução original que deve ser usado para preparar a solução desejada.
