--- a/2023/em/em_1_p2b/em_1_p2b_08.md
+++ b/2023/em/em_1_p2b/em_1_p2b_08.md
@@ -1,3 +1,3 @@
-Quando $\pu{0,24 g}$ de aspirina (um composto de carbono, hidrogênio e oxigênio) é queimado, formam-se $\pu{0,52 g}$ de dióxido de carbono e $\pu{0,094 g}$ de água.
+Uma solução aquosa $\pu{0,778 mol.L-1}$ em $\ce{Na2CO3}$ deve ser diluída até $\pu{150 mL}$ com água para reduzir sua concentração a $\pu{0,0234 mol.L-1}$ de $\ce{Na2CO3}$.
 
-**Determine** a alternativa com a fórmula empírica da aspirina.
+**Determine** o volume da solução original que deve ser usado para preparar a solução desejada.
