--- a/2023/t15_2/t15_2_01.md
+++ b/2023/t15_2/t15_2_01.md
@@ -1,5 +1,4 @@
-Determine o valor de $K$ para que as raízes da equação do segundo grau:
+Determine os valores de $x$ que satisfazem:
 $$
-    (K-5) x^2 - 4Kx + K - 2 = 0
+    \sqrt{3-x} - \sqrt{x+1} > \dfrac{1}{2}
 $$
-sejam o seno e o cosseno de um mesmo arco.
