--- a/2023/t15_2/t15_2_02.md
+++ b/2023/t15_2/t15_2_02.md
@@ -1,4 +1,9 @@
-Determine o conjunto-solução da inequação:
+Determine o valor do determinante:
 $$
-    x + \sqrt{x^2 - 10x + 9} > \sqrt{x + 2\sqrt{x^2 - 10x +9}}
+    \begin{vmatrix}
+        1 & 1 & 1 & 1 \\
+        \sqrt{2} & \sqrt{3} & 2  & 9 \\
+        2 & 3 & 4 & 9 \\
+        4 & 9 & 16 & 81
+    \end{vmatrix}
 $$
