--- a/2023/t15_2/t15_2_04.md
+++ b/2023/t15_2/t15_2_04.md
@@ -1,1 +1,5 @@
-Seja $a_k$ o termo de ordem $k$ de uma progressão geométrica infinita tal que $a_n = 1/6$. A razão entre a soma dos termos que precedem (ou seja, $\sum_{k = 1}^{n - 1} a_k$) e a soma dos termos que o sucedem (ou $\sum_{k = n + 1}^{+\infty} a_k$) é $30$. Se a soma dos termos da progressão é $16/3$. qual é o valor de $n$?
+Seja $a$ um complexo e $b$ um número real. Prove que se a equação:
+$$
+    |z|^2 + \mathfrak{R}(az) + b = 0
+$$
+tem soluções, então $|a|^2 \geq 4b$.
