--- a/2023/t15_2/t15_2_05.md
+++ b/2023/t15_2/t15_2_05.md
@@ -1,17 +1,4 @@
-Sejam $f$ e $g$ funções reais definidas por 
+Resolva a equação:
 $$
-    f(x)=
-    \begin{cases}
-        4x - 3, \text{ se } x\geq 0 \\
-        x^2 - 3x + 2, \text{ se } x < 0
-    \end{cases}
+    \sin^3 (3x) + \cos^3 (3x) = 1
 $$
-e 
-$$
-    g(x)=
-    \begin{cases}
-        x + 1, \text{ se } x > 2 \\
-        1 - x^2, \text{ se } x \leq 2
-    \end{cases}
-$$
-Sendo assim, determine a expressão de $f\circ g(x)$.
