--- a/2023/t15_2/t15_2_08.md
+++ b/2023/t15_2/t15_2_08.md
@@ -1,4 +1,4 @@
-Considere 10 pontos em um plano, entre os quais não há 3 pontos colineares.
+Seja o triângulo $\triangle OAB$ no plano cartesiano, em que $O$ é a origem do sistema de eixos e os pontos $A$ e $B$ estão respectivamente nas retas $y = 1$ e $y = 3$, alinhados com o ponto $(7,0)$. 
 
-a. Quantas são as retas que contém dois desses pontos?
-b. Qual é o número máximo de pontos de interseção dessas retas?
+Determine as coordenadas de $A$ e $B$ para os quais a soma dos quadrados das medidas dos lados do $\triangle OAB$ é mínima.
+
