--- a/2023/t15_2/t15_2_10.md
+++ b/2023/t15_2/t15_2_10.md
@@ -1,15 +1,1 @@
-O produto B é obtido pela reação de decomposição:
-$$
-    A -> B + C
-$$
-A unidade industrial para a síntese de B é composta por um reator e uma torre de destilação, que separa o efluente do reator em uma corrente de produto e uma corrente de reciclo. A corrente de produto contém $4\%$ de A em base molar, e a corrente de reciclo contém $84\%$ de A e $16\%$ de B em base molar. 
-
-\begin{center}
-\includegraphics{main.pdf}
-\end{center}
-
-A reação de conversão de A em B no reator tem rendimento de 40\%. A corrente de entrada consiste em $\pu{100 mol.min-1}$ de A.
-
-- **Determine** a conversão global de A.
-- **Determine** a pureza do produto.
-- **Determine** a vazão molar da corrente de reciclo.
+Uma moeda é lançada sucessivas vezes até que se tenha a ocorrência de 3 caras. Qual a probabilidade de o número total de lançamentos ser múltiplo de 3?
