--- a/2023/t15_2/t15_2_03.md
+++ b/2023/t15_2/t15_2_03.md
@@ -1,1 +1,3 @@
-Em um triângulo $ABC$, acutângulo, a bissetriz interna do ângulo $\hat{B}$ intercepta $AC$ no ponto $D$. Uma reta paralela ao lado $AB$, que passa pelo ponto $D$, intercepta o lado $BC$ no ponto $E$. Pelo ponto $E$ traça-se uma paralela ao segmento $BD$ que corta $AC$ no ponto $F$. Sendo $AB = \pu{20 cm}$, $BC = \pu{30 cm}$ e $DF = \pu{6 cm}$, determine o comprimento do segmento $BD$.
+Considere o polinômio: $x^3 - ax^2 + ax - 1$  com raízes $r_1$, $r_2$ e $r_3$. 
+
+Determine os possíveis valores de $a$ de modo que $r_1$, $r_2$ e $r_3$ sejam lados de um triângulo. 
