--- a/2023/t15_2/t15_2_06.md
+++ b/2023/t15_2/t15_2_06.md
@@ -1,8 +1,12 @@
-Seja $S$ o conjunto de todos os números complexos $z$ satisfazendo
+Se
 $$
-    |z -2 + i| \geq \sqrt{5}
+    A = 
+    \begin{pmatrix}
+        1 & 1 \\
+        1 & 1
+    \end{pmatrix}
 $$
-Se o número complexo $z_0$ é tal que $\frac{1}{|z_0 -1|}$ é o máximo do conjunto $\left\{\frac{1}{|z - 1|}: z \in S \right\}$, determine os possíveis argumentos de:
+Determine a matriz:
 $$
-    \frac{4 - z_0 - \overline{z_0}}{z_0 - \overline{z_0} + 2i}
+    X = \sum_{k=1}^{10} A^k
 $$
