--- a/2023/t15_2/t15_2_07.md
+++ b/2023/t15_2/t15_2_07.md
@@ -1,1 +1,4 @@
-São dados três pontos no plano cartesiano: $P(5,2)$, $Q(2,-1)$ e $R(2,0)$. Sabe-se que a figura geométrica formada pelos pontos que distam $k$ da reta $PQ$ e $2k$ do ponto $R$ é um triângulo. Determine o valor de $k$, sendo $k$ um número real positivo.
+Seja $\triangle ABC$ um triângulo de lados com medidas iguais a $\overline{AB} = 3$, $\overline{BC} = 4$ e $\overline{AC} = \sqrt{5}$. Sejam $m_a$, $m_b$ e $m_c$ as medidas das medianas relativas aos lados $BC$, $AC$ e $AB$, respectivamente. 
+
+Calcule o maior ângulo interno de um triângulo cujos lados possuem medidas iguais a $m_a$, $m_b$ e $m_c$.
+
