--- a/2023/t15_2/t15_2_09.md
+++ b/2023/t15_2/t15_2_09.md
@@ -1,5 +1,3 @@
-Analise para quais valores de $\lambda$ a equação:
-$$
-    \sec(x) + \csc(x) = \lambda
-$$
-Apresenta solução para algum $x$ tal que $0 < x < \frac{\pi}{2}$.
+Considere um triângulo isósceles $\triangle ABC$ retângulo em $A$. Sejam os pontos $D$ e $E$ sobre $AC$ e $AB$, respectivamente, tais que $BD \cup CE = P$. 
+
+Determine a área do triângulo $\triangle BCP$ sabendo que $\overline{AB} = \overline{AC} = a$ e $\overline{AD} = \overline{AE} = a$.
