--- a/2023/t15_2/t15_2_15.md
+++ b/2023/t15_2/t15_2_15.md
@@ -1,4 +1,4 @@
-Considere as entalpia de rede e de solução.
+Considere as entalpias de rede e de solução:
 
 | Dados em $\pu{25 \degree C}$                                      | $\ce{NaCl}$ | $\ce{NaI}$ | $\ce{KCl}$ |  $\ce{KI}$ |
 | :---------------------------------------------------------------- | ----------: | ---------: | ---------: | ---------: |
