--- a/2023/t15_2/t15_2_18.md
+++ b/2023/t15_2/t15_2_18.md
@@ -5,7 +5,7 @@ A nicotina é um composto orgânico da classe dos alcaloides que está presente 
 ```
 
 Deseja-se isolar a nicotina de uma solução deste composto em diclorometano contaminada com tolueno. Para isso,
-dispõe-se de uma solução $\pu{1 mol.L-1}$ de $\ce{NaOH}$ e de uma solução $\ce{1 mol.L-1}$ de $\ce{HCl}$.
+dispõe-se de uma solução $\pu{1 mol.L-1}$ de $\ce{NaOH}$ e de uma solução $\pu{1 mol.L-1}$ de $\ce{HCl}$.
 
 a. **Apresente** a estrutura do cátion e do dicátion da nicotina que são formados em solução ácida.
 b. **Proponha** um processo de purificação da nicotina utilizando os reagentes a disposição.
