--- a/src/diagramador/latex/templates/braunchem.sty
+++ b/src/diagramador/latex/templates/braunchem.sty
@@ -28,7 +28,7 @@
 %                                              
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
  
-\RequirePackage { l3keys2e, xparse, chemfig }
+\RequirePackage { l3keys2e, xparse, chemfig, chemplants }
 
 \usetikzlibrary{ calc, decorations }
 
